Added sending user messages functionality

--- a/Real-time Chat/task/resources/static/index.html
+++ b/Real-time Chat/task/resources/static/index.html
@@ -8,17 +8,14 @@
     </head>
     <body>
         <div id="messages">
-            <div class="message">Message 1</div>
-            <div class="message">Message 2</div>
-            <div class="message">Message 3</div>
-            <div class="message">Message 4</div>
-            <div class="message">Message 5</div>
+
         </div>
         <div class="input-footer">
             <form action="">
-                <input id="input-msg" type="text" placeholder="Type a message"/>
+                <textarea id="input-msg" placeholder="Type a message"></textarea>
                 <button id="send-msg-btn" type="submit"><i class="fas fa-paper-plane"></i></button>
             </form>
         </div>
+        <script src="main.js"></script>
     </body>
 </html>
