Implemented the group chat

--- a/Real-time Chat/task/resources/static/index.html
+++ b/Real-time Chat/task/resources/static/index.html
@@ -16,6 +16,8 @@
                 <button id="send-msg-btn" type="submit"><i class="fas fa-paper-plane"></i></button>
             </form>
         </div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.5.0/sockjs.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
         <script src="main.js"></script>
     </body>
 </html>
