--- a/Real-time Chat/task/resources/static/index.html
+++ b/Real-time Chat/task/resources/static/index.html
@@ -7,15 +7,22 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     </head>
     <body>
-        <div id="messages">
 
+        <div id="username-container">
+            <input type="text" id="input-username" placeholder="Enter username...">
+            <button id="send-username-btn" type="button">Send</button>
         </div>
-        <div class="input-footer">
-            <form action="">
-                <textarea id="input-msg" placeholder="Type a message"></textarea>
-                <button id="send-msg-btn" type="submit"><i class="fas fa-paper-plane"></i></button>
-            </form>
+
+        <div id="chat-container" style="display: none;">
+            <div id="messages"></div>
+            <div class="input-footer">
+                <form action="">
+                    <textarea id="input-msg" placeholder="Type a message"></textarea>
+                    <button id="send-msg-btn" type="submit"><i class="fas fa-paper-plane"></i></button>
+                </form>
+            </div>
         </div>
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.5.0/sockjs.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
         <script src="main.js"></script>
