Implemented online users sections

--- a/Real-time Chat/task/resources/static/index.html
+++ b/Real-time Chat/task/resources/static/index.html
@@ -14,6 +14,7 @@
         </div>
 
         <div id="chat-container" style="display: none;">
+            <div id="users"></div>
             <div id="messages"></div>
             <div class="input-footer">
                 <form action="">
