--- a/Real-time Chat/task/resources/static/index.html
+++ b/Real-time Chat/task/resources/static/index.html
@@ -14,14 +14,22 @@
         </div>
 
         <div id="chat-container" style="display: none;">
-            <div id="users"></div>
-            <div id="messages"></div>
-            <div class="input-footer">
-                <form action="">
-                    <textarea id="input-msg" placeholder="Type a message"></textarea>
-                    <button id="send-msg-btn" type="submit"><i class="fas fa-paper-plane"></i></button>
-                </form>
+            <div id="left-column">
+                <div id="users" class="user-list"></div>
+                <button id="public-chat-btn">Public chat</button>
             </div>
+
+            <div id="right-column">
+                <div id="chat-header">Public chat</div>
+                <div id="messages"></div>
+                <div class="input-footer">
+                    <form action="">
+                        <textarea id="input-msg" placeholder="Type a message"></textarea>
+                        <button id="send-msg-btn" type="submit"><i class="fas fa-paper-plane"></i></button>
+                    </form>
+                </div>
+            </div>
+
         </div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.5.0/sockjs.js"></script>
