Private/Public chat initial functionality

--- a/Real-time Chat/task/resources/static/index.html
+++ b/Real-time Chat/task/resources/static/index.html
@@ -20,7 +20,7 @@
             </div>
 
             <div id="right-column">
-                <div id="chat-header">Public chat</div>
+                <div id="chat-with">Public chat</div>
                 <div id="messages"></div>
                 <div class="input-footer">
                     <form action="">
